--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Kreutzer CI/CD Platform</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Kreutzer CI/CD Platform" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="app2"></div>
     <script type="module" src="/src/main.ts"></script>
     <script src="https://tam.cdn-go.cn/aegis-sdk/latest/aegis.min.js?max_age=3600" language="javascript">
       // https://cloud.tencent.com/document/product/1464/58553
@@ -22,7 +23,7 @@
           reportApiSpeed: true,
           reportAssetSpeed: true,
           hostUrl: 'https://rumt-zh.com',
-          spa: true
+          spa: true,
         });
       }
     </script>
