--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -13,13 +13,12 @@
   </head>
   <body>
     <div id="app"></div>
-    <div id="app2"></div>
     <script type="module" src="/src/main.ts"></script>
     <script src="https://tam.cdn-go.cn/aegis-sdk/latest/aegis.min.js?max_age=3600" language="javascript">
       // https://cloud.tencent.com/document/product/1464/58553
       if (window.location.host === 'kreutzer.leryn.top') {
         const aegis = new Aegis({
-          id: 'rDISNMyXgqWDFPyHMB',
+          id: 'rum-K9sK7Kt8E1J8OZ',
           reportApiSpeed: true,
           reportAssetSpeed: true,
           hostUrl: 'https://rumt-zh.com',
